--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+  <head>
+
+      <meta charset="utf-8">
+      <title>ANGULAR</title>
+
+  </head>
+<body>
 <my-app>loading</my-app>
+
+</body>
+
+</html>
